@@ -26,7 +26,7 @@
     <parent>
       <groupId>org.jboss</groupId>
       <artifactId>jboss-parent</artifactId>
-      <version>16</version>
+      <version>17</version>
     </parent>
 
     <groupId>org.wildfly.core</groupId>
@@ -64,6 +64,15 @@
             For example: <version.surefire.plugin>2.11</version.surefire.plugin>
           -->
         <maven.min.version>3.2.1</maven.min.version>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+
+        <!-- sticking with 3.1 as 3.2 has problems with partial recompile -->
+        <version.compiler.plugin>3.1</version.compiler.plugin>
+        <version.checkstyle.plugin>2.15</version.checkstyle.plugin>
+        <version.checkstyle>6.3</version.checkstyle>
+        <version.enforcer.plugin>1.4</version.enforcer.plugin>
+        <version.surefire.plugin>2.17</version.surefire.plugin>
         <!--
             Dependency versions. Please keep alphabetical.
 
@@ -130,7 +139,7 @@
         <version.org.wildfly.build-tools>1.0.0.Alpha8</version.org.wildfly.build-tools>
         <version.org.wildfly.legacy.test>1.0.0.Alpha9</version.org.wildfly.legacy.test>
         <version.org.wildfly.security.manager>1.1.2.Final</version.org.wildfly.security.manager>
-        <version.org.wildfly.checkstyle-config>1.0.0.Final</version.org.wildfly.checkstyle-config>
+        <version.org.wildfly.checkstyle-config>1.0.3.Final</version.org.wildfly.checkstyle-config>
         <version.xml-resolver>1.2</version.xml-resolver> <!-- Apache xml-resolver -->
         <!-- Non-default maven plugin versions and configuration -->
         <version.org.zanata.plugin>3.1.1</version.org.zanata.plugin>
@@ -276,7 +285,7 @@
                                   <value>${test.level}</value>
                               </property>
                           </systemProperties>
-                          <argLine>-Duser.region=US -Duser.language=en -XX:MaxPermSize=256m</argLine>
+                          <argLine>-Duser.region=US -Duser.language=en</argLine>
                     </configuration>
 
                 </plugin>
@@ -286,7 +295,7 @@
                     <artifactId>maven-checkstyle-plugin</artifactId>
                     <version>${version.checkstyle.plugin}</version>
                     <configuration>
-                        <configLocation>jboss-as-checkstyle/checkstyle.xml</configLocation>
+                        <configLocation>wildfly-checkstyle/checkstyle.xml</configLocation>
                         <consoleOutput>true</consoleOutput>
                         <failsOnError>true</failsOnError>
                         <useFile/>
